Editing the notebook

--- a/spam.ipynb
+++ b/spam.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "# Using SPAM algorithm to generate LDCs\n",
     "\n",
-    "SPAM, which stands for Synthetic-Photometry/Atmosphere-Model, is an algorith to generate limb darkening coefficients from synthetic exoplanet transit photometry using model stellar atmospheres."
+    "SPAM, which stands for Synthetic-Photometry/Atmosphere-Model, is an algorith to generate limb darkening coefficients from synthetic exoplanet transit photometry using model stellar atmospheres. The model originally presented in Howarth (2011) and modified in Espinoza & Jordan (2015)."
    ],
    "metadata": {}
   },
