MC-SPAM completed

--- a/Notebooks/spam.ipynb
+++ b/Notebooks/spam.ipynb
@@ -26,7 +26,8 @@
     "import batman\n",
     "from scipy.optimize import curve_fit as cft\n",
     "from scipy.optimize import minimize as mz\n",
-    "from scipy.optimize import leastsq as lsq"
+    "from scipy.optimize import leastsq as lsq\n",
+    "from tqdm import tqdm"
    ],
    "outputs": [],
    "metadata": {}
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "source": [
     "time = np.linspace(-4.41193789/(9.719*np.pi), 4.41193789/(9.719*np.pi), 1000)\n",
     "flux = transit(time, 0., 4.41193789, 0.11108, 9.719, 0.228, 0., 90., [0.461242, 0.339466, -0.16376, 3.4e-05], \"nonlinear\")\n",
@@ -104,7 +105,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 3
     },
     {
      "output_type": "display_data",
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "source": [
     "def min_log_likelihood(x):\n",
     "    model = transit(time, 0., 4.41193789, 0.11108, 9.719, 0.228, 0., 90., x, \"quadratic\")\n",
@@ -158,7 +159,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "source": [
     "flux_qua = transit(time, 0., 4.41193789, 0.11108, 9.719, 0.228, 0., 90., soln.x, \"quadratic\")\n",
     "\n",
@@ -243,9 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "source": [
-    "def spam(time, t0, per, rp, a, b, ecc, w, u):\n",
+    "def spam(time, per, rp, a, b, u, ecc=0., w=90., t0=0.):\n",
     "    synthetic_flux = transit(time, t0, per, rp, a, b, ecc, w, u, \"nonlinear\")\n",
     "    def min_log_likelihood(x):\n",
     "        model = transit(time, t0, per, rp, a, b, ecc, w, x, \"quadratic\")\n",
@@ -260,9 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "source": [
-    "u_spam = spam(time, 0., 4.41193789, 0.11108, 9.719, 0.228, 0., 90., [0.461242, 0.339466, -0.16376, 3.4e-05])\n",
+    "u_spam = spam(time, 4.41193789, 0.11108, 9.719, 0.228, [0.461242, 0.339466, -0.16376, 3.4e-05])\n",
     "print(u_spam)"
    ],
    "outputs": [
@@ -271,6 +272,67 @@
      "name": "stdout",
      "text": [
       "[0.29399358 0.21447121]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## MC-SPAM\n",
+    "\n",
+    "As already discussed the original SPAM algorithm doesn't take care of the unccertainties involved in the planetary and stellar parameters. The Monte-Carlo SPAM ([MC-SPAM](https://github.com/nespinoza/mc-spam)) by [Espinoza & Jordan (2015)](https://academic.oup.com/mnras/article/450/2/1879/985166) solves this problem. Below we present the code for this new algorithm."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "def mc_spam(time, per, per_err, rp, rp_err, a, a_err, b, b_err, u, ecc=0., w=90., t0=0.):\n",
+    "    period = np.random.normal(per, per_err, 1000)\n",
+    "    rp1 = np.random.normal(rp, rp_err, 1000)\n",
+    "    ar1 = np.random.normal(a, a_err, 1000)\n",
+    "    b1 = np.random.normal(b, b_err, 1000)\n",
+    "    u1_mcs, u2_mcs = np.zeros(1000), np.zeros(1000)\n",
+    "    for i in tqdm(range(len(period))):\n",
+    "        u1_mcs[i], u2_mcs[i] = spam(time, period[i], rp1[i], ar1[i], b1[i], u)\n",
+    "    return u1_mcs, u2_mcs"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "u1_mcspan, u2_mcspan = mc_spam(time, 4.41193789, 0.000000315, 0.11108, 0.00015, 9.719, 0.032, 0.228, 0.015, [0.461242, 0.339466, -0.16376, 3.4e-05])\n",
+    "\n",
+    "print('MC-SPAM value of u1: {:.4f} +/- {:.4f}'.format(np.median(u1_mcspan), np.std(u1_mcspan)))\n",
+    "print('MC-SPAM value of u2: {:.4f} +/- {:.4f}'.format(np.median(u2_mcspan), np.std(u2_mcspan)))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 1000/1000 [01:44<00:00,  9.57it/s]"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "MC-SPAM value of u1: 0.2940 +/- 0.0008\n",
+      "MC-SPAM value of u2: 0.2144 +/- 0.0007\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "\n"
      ]
     }
    ],
