--- a/Notebooks/spam.ipynb
+++ b/Notebooks/spam.ipynb
@@ -322,7 +322,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 1000/1000 [01:56<00:00,  8.59it/s]"
+      "100%|██████████| 1000/1000 [01:50<00:00,  9.03it/s]"
      ]
     },
     {
@@ -346,9 +346,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Repeating the whole procedure with `curve-fit` method\n",
+    "## Repeating the whole procedure with `least square` method\n",
     "\n",
-    "In what follows, we shall use `scipy.optimize.curve_fit` to fit the model transit lightcurve to the synthetic lightcurve."
+    "In what follows, we shall use `scipy.optimize.leastsq` to fit the model transit lightcurve to the synthetic lightcurve."
    ],
    "metadata": {}
   },
@@ -356,19 +356,20 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "def mods(time, u1, u2):\n",
-    "    fl = transit(time, 0., 4.41193789, 0.11108, 9.719, 0.228, 0., 90., [u1, u2], \"quadratic\")\n",
-    "    return fl\n",
+    "def resid(x):\n",
+    "    model = transit(time, 0., 4.41193789, 0.11108, 9.719, 0.228, 0., 90., x, \"quadratic\")\n",
+    "    residuals = flux-model\n",
+    "    return residuals\n",
     "\n",
-    "popt, pcov = cft(mods, time, flux)\n",
-    "print(popt)"
+    "soln1 = lsq(resid, x0=[0.2306076190476191, 0.3186269841269841])\n",
+    "print(soln1[0])"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0.2937535  0.21445591]\n"
+      "[0.29375349 0.21445592]\n"
      ]
     }
    ],
@@ -378,7 +379,7 @@
    "cell_type": "markdown",
    "source": [
     "Well, it seems to work fine as well, I guess...\n",
-    "Then, let's write SPAM and MC-SPAM algorithm using `curve-fit` method!"
+    "Then, let's write SPAM and MC-SPAM algorithm using `leastsq` method!"
    ],
    "metadata": {}
   },
@@ -386,23 +387,24 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "def spam_cft(time, per, rp, a, b, u, ecc=0., w=90., t0=0.):\n",
+    "def spam_lsq(time, per, rp, a, b, u, ecc=0., w=90., t0=0.):\n",
     "    synthetic_flux = transit(time, t0, per, rp, a, b, ecc, w, u, \"nonlinear\")\n",
-    "    def model(time, u1, u2):\n",
-    "        fl_mod = transit(time, t0, per, rp, a, b, ecc, w, [u1, u2], \"quadratic\")\n",
-    "        return fl_mod\n",
+    "    def resid(x):\n",
+    "        model = transit(time, t0, per, rp, a, b, ecc, w, x, \"quadratic\")\n",
+    "        residuals = synthetic_flux - model\n",
+    "        return residuals\n",
     "    u1_guess, u2_guess = (12./35.)*u[0] + u[1] + (164./105.)*u[2] + 2.*u[3], (10./21.)*u[0] - (34./63.)*u[2] - u[3]\n",
-    "    popt, pcov = cft(model, time, synthetic_flux, p0=[u1_guess, u2_guess])\n",
-    "    return popt[0], popt[1]\n",
+    "    soln = lsq(resid, x0 = [u1_guess, u2_guess])\n",
+    "    return soln[0][0], soln[0][1]\n",
     "\n",
-    "def mc_spam_cft(time, per, per_err, rp, rp_err, a, a_err, b, b_err, u, ecc=0., w=90., t0=0.):\n",
+    "def mc_spam_lsq(time, per, per_err, rp, rp_err, a, a_err, b, b_err, u, ecc=0., w=90., t0=0.):\n",
     "    period = np.random.normal(per, per_err, 1000)\n",
     "    rp1 = np.random.normal(rp, rp_err, 1000)\n",
     "    ar1 = np.random.normal(a, a_err, 1000)\n",
     "    b1 = np.random.normal(b, b_err, 1000)\n",
     "    u1_mcs, u2_mcs = np.zeros(1000), np.zeros(1000)\n",
     "    for i in tqdm(range(len(period))):\n",
-    "        u1_mcs[i], u2_mcs[i] = spam_cft(time, period[i], rp1[i], ar1[i], b1[i], u)\n",
+    "        u1_mcs[i], u2_mcs[i] = spam_lsq(time, period[i], rp1[i], ar1[i], b1[i], u)\n",
     "    return u1_mcs, u2_mcs"
    ],
    "outputs": [],
@@ -419,25 +421,25 @@
    "cell_type": "code",
    "execution_count": 12,
    "source": [
-    "u1_mcspan_cft, u2_mcspan_cft = mc_spam_cft(time, 4.41193789, 0.000000315, 0.11108, 0.00015, 9.719, 0.032, 0.228, 0.015, [0.461242, 0.339466, -0.16376, 3.4e-05])\n",
+    "u1_mcspam_lsq, u2_mcspam_lsq = mc_spam_lsq(time, 4.41193789, 0.000000315, 0.11108, 0.00015, 9.719, 0.032, 0.228, 0.015, [0.461242, 0.339466, -0.16376, 3.4e-05])\n",
     "\n",
-    "print('MC-SPAM value of u1: {:.4f} +/- {:.4f}'.format(np.median(u1_mcspan_cft), np.std(u1_mcspan_cft)))\n",
-    "print('MC-SPAM value of u2: {:.4f} +/- {:.4f}'.format(np.median(u2_mcspan_cft), np.std(u2_mcspan_cft)))"
+    "print('MC-SPAM value of u1: {:.4f} +/- {:.4f}'.format(np.median(u1_mcspam_lsq), np.std(u1_mcspam_lsq)))\n",
+    "print('MC-SPAM value of u2: {:.4f} +/- {:.4f}'.format(np.median(u2_mcspam_lsq), np.std(u2_mcspam_lsq)))"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 1000/1000 [01:35<00:00, 10.46it/s]"
+      "100%|██████████| 1000/1000 [01:38<00:00, 10.20it/s]"
      ]
     },
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "MC-SPAM value of u1: 0.2937 +/- 0.0007\n",
-      "MC-SPAM value of u2: 0.2145 +/- 0.0008\n"
+      "MC-SPAM value of u1: 0.2939 +/- 0.0007\n",
+      "MC-SPAM value of u2: 0.2143 +/- 0.0009\n"
      ]
     },
     {
