--- a/Notebooks/spam_vs_limiting_LDCs.ipynb
+++ b/Notebooks/spam_vs_limiting_LDCs.ipynb
@@ -116,6 +116,13 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "So, it can be observed that the there is a strong correlation between the limiting LDCs and the MC-SPAM LDCs when ATLAS (Espinoza & Jordan 2015) LDCs are used. Furthermore, the bias between these two set is very low ($\\sim 0.05-0.1$)."
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
